[gd_scene load_steps=3 format=2]

[ext_resource path="res://Turn/Turn.gd" type="Script" id=1]
[ext_resource path="res://Turn/hook.png" type="Texture" id=2]

[node name="Selector" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="HookTopLeft" type="Sprite" parent="."]
position = Vector2( -16, -16 )
texture = ExtResource( 2 )

[node name="HookTopRight" type="Sprite" parent="."]
position = Vector2( 16, -16 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="HookBottomRight" type="Sprite" parent="."]
position = Vector2( 16, 16 )
rotation = 3.14159
texture = ExtResource( 2 )

[node name="HookBottomLeft" type="Sprite" parent="."]
position = Vector2( -16, 16 )
rotation = 4.71239
texture = ExtResource( 2 )
